@@ -29,7 +29,10 @@ static GRegex *rx;
 /* exported init function */
 int tagsistant_plugin_init()
 {
-	rx = g_regex_new("^(author|date|language)$", TAGSISTANT_RX_COMPILE_FLAGS, 0, NULL);
+	gchar *pattern = tagsistant_get_ini_entry("mime:application/xml", "filter");
+	if (!pattern) pattern = "^(author|date|language)$";
+
+	rx = g_regex_new(pattern, TAGSISTANT_RX_COMPILE_FLAGS, 0, NULL);
 
 	return(1);
 }
